--- a/templates/ask.html
+++ b/templates/ask.html
@@ -14,7 +14,7 @@
             <!-- logo -->
             <div>
                 <a href="">
-                    <img class="fadeIn sidebar__logo-backend" src="{{ url_for('static',filename='img/logo.png') }}" alt="logo">
+                    <img class="sidebar__logo-backend" src="{{ url_for('static',filename='img/logo.png') }}" alt="logo">
                 </a>
             </div>
             <!-- ./logo -->
@@ -56,7 +56,7 @@
                             <ul class="nav text-center">
                                 <li>
                                     <div class="form-group mobi-hide">
-                                        <img class="icon input-icon fadeIn" src="{{ url_for('static',filename='img/loupe.svg') }}" />
+                                        <img class="icon input-icon" src="{{ url_for('static',filename='img/loupe.svg') }}" />
                                         <input class="input-control stretchRight input-icon-group" type='text' placeholder="Search for a Question...">
                                     </div>
                                 </li>
@@ -116,7 +116,7 @@
                    <div class="col-6">
                        <div class="panel">
                            <span class="mega-text">&nbsp;</span>
-                           <img src="{{ url_for('static',filename='img/unnamed.png') }}" class="fadeIn card-image" />
+                           <img src="{{ url_for('static',filename='img/unnamed.png') }}" class="card-image" />
                        </div>
                    </div>                   
                </div>
