--- a/templates/tags.html
+++ b/templates/tags.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ask a Question - Stackoverflow lite</title>
+    <title>Tags - Stackoverflow lite</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}">    
 </head>
 <body>
@@ -14,7 +14,7 @@
             <!-- logo -->
             <div>
                 <a href="">
-                    <img class="fadeIn sidebar__logo-backend" src="{{ url_for('static',filename='img/logo.png') }}" alt="logo">
+                    <img class="sidebar__logo-backend" src="{{ url_for('static',filename='img/logo.png') }}" alt="logo">
                 </a>
             </div>
             <!-- ./logo -->
@@ -56,7 +56,7 @@
                             <ul class="nav text-center">
                                 <li>
                                     <div class="form-group mobi-hide">
-                                        <img class="icon input-icon fadeIn" src="{{ url_for('static',filename='img/loupe.svg') }}" />
+                                        <img class="icon input-icon" src="{{ url_for('static',filename='img/loupe.svg') }}" />
                                         <input class="input-control stretchRight input-icon-group" type='text' placeholder="Search for a Question...">
                                     </div>
                                 </li>
@@ -67,7 +67,7 @@
                                 <li>
                                     <a href="index.html">Home</a>
                                 </li>
-                                <li>                                
+                                <li>
                                     <a href="index.html" class="btn btn-round mt--5 bg-orange">
                                         Log out
                                     </a>                                
@@ -77,49 +77,39 @@
                     </div>
                 </div>
             <!-- ./navbar -->
-            
             <!-- list -->
             <div class="clearfix"></div>
             <div class="main-wrapper">
-               <div class="container">
-                   <div class="col-6">
+                <div class="container">
+                    <div class="col-6">
                         <div class="panel bg-white">
                             <div class="panel__heading" >
                                 <div class="mega-text hatch text-primary">
-                                        Ask a question
+                                        Tags
                                 </div>                                                        
                             </div>
                             <div class="panel__body m-20">
-                                <!-- question -->
-                                <form class="form-ask" method="POST">
-                                    <div class="">
-                                        <label>Title</label>
-                                        <input class="stretchRight input-control" style="font-size: 15px;" type='text' name='title' placeholder="What's your programming question? Be specific...">
+                                {% for i in range(0,n,4) %}
+                                    <div class="row">
+                                        <div class="column">
+                                            <h3>{{tags[i][1]}}</h3>
+                                        </div>
+                                        <div class="column">
+                                            <h3>{{tags[i+1][1]}}</h3>
+                                        </div>
+                                        <div class="column">
+                                            <h3>{{tags[i+2][1]}}</h3>
+                                        </div>
+                                        <div class="column">
+                                            <h3>{{tags[i+3][1]}}</h3>
+                                        </div>
                                     </div>
                                     <br>
-                                    <div class="">
-                                        <label>Body</label>
-                                        <textarea class="stretchRight input-control" style="font-size: 15px;" name='body' placeholder="Please elaborate here..."></textarea>
-                                    </div>
-                                   
-                                    <div class="">
-                                        <button class="floating pull-left btn btn-primary bg-orange p-15 btn-block">
-                                            Post Your Question
-                                        </button>
-                                    </div> 
-                            </form>
-                            <!-- ./question -->
-                                    
+                                {% endfor %}
                             </div>
                         </div>
-                   </div> 
-                   <div class="col-6">
-                       <div class="panel">
-                           <span class="mega-text">&nbsp;</span>
-                           <img src="{{ url_for('static',filename='img/unnamed.png') }}" class="fadeIn card-image" />
-                       </div>
-                   </div>                   
-               </div>
+                    </div>                   
+                </div>
             </div>
             <!-- ./list -->
         </div>
