--- a/templates/tags.html
+++ b/templates/tags.html
@@ -21,7 +21,7 @@
             <div class="sidebar-items">
                 <ul class="sidebar-items__nav nav column">
                     <li class="">
-                        <a href="{{url_for('quespage')}}">
+                        <a href="{{url_for('questions')}}">
                             <img class="icon" src="{{ url_for('static',filename='img/question-mark.svg') }}"/>
                             <span class="sidebar-items__text">Questions</span>
                         </a>                        
