--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
           <div class="pull-left mobi-hide">
             <ul class="nav text-center">
               <li>
-                <a href="#">
+                <a href="">
                   <img
                     class="hatch logo"
                     src="../static/img/logo.png"
@@ -27,7 +27,7 @@
           <div class="pull-right">
             <ul class="nav">
               <li>
-                <a href="#">Home</a>
+                <a href="">Home</a>
               </li>
               <li>
                 <a href="{{url_for('askQuestion')}}">Ask</a>
@@ -109,8 +109,8 @@
       <!-- ./container -->
       <div class="clearfix"></div>
       <div class="full-span bg-primary p-15 text-center">
-        <div class="mega-text fadeIn">Ask A Question</div>
-        <p class="fadeIn">
+        <div class="mega-text">Ask A Question</div>
+        <p>
           You can ask a question / post on our community by providing all the
           required details.
         </p>
