Added Pagination to Tags

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -27,7 +27,7 @@
                         </a>                        
                     </li>
                     <li class="">
-                        <a href="{{url_for('tagpage')}}">
+                        <a href="{{url_for('tagpage',page_no=1)}}">
                             <img class="icon" src="{{ url_for('static',filename='img/price-tag.svg') }}" />
                             <span class="sidebar-items__text">Tags</span>
                         </a>                        
