--- a/templates/tags.html
+++ b/templates/tags.html
@@ -27,7 +27,7 @@
                         </a>                        
                     </li>
                     <li class="sidebar-items__nav--active">
-                        <a class="active-text" href="{{url_for('tagpage')}}">
+                        <a class="active-text" href="{{url_for('tagpage',page_no=page_no)}}">
                             <img class="icon" src="{{ url_for('static',filename='img/price-tag.svg') }}" />
                             <span class="sidebar-items__text">Tags</span>
                         </a>                        
@@ -99,23 +99,55 @@
                                     }
                                 </style>
                                 <table style="border-spacing: 30px;">
-                                    {% for i in range(0,n,4) %}
-                                        <tr>
-                                            <td>
-                                                <h3>{{tags[i][1]}}</h3>
-                                            </td>
-                                            <td>
-                                                <h3>{{tags[i+1][1]}}</h3>
-                                            </td>
-                                            <td>
-                                                <h3>{{tags[i+2][1]}}</h3>
-                                            </td>
-                                            <td>
-                                                <h3>{{tags[i+3][1]}}</h3>
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
+                                            {% for j in range(start,end,4) %}
+                                            <tr>
+                                                <td>
+                                                    <h3>{{tags[j][1]}}</h3>
+                                                </td>
+                                                <td>
+                                                    <h3>{{tags[j+1][1]}}</h3>
+                                                </td>
+                                                <td>
+                                                    <h3>{{tags[j+2][1]}}</h3>
+                                                </td>
+                                                <td>
+                                                    <h3>{{tags[j+3][1]}}</h3>
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
                                 </table>
+                                <style>         
+                                #aa {
+                                    text-decoration: none;
+                                    display: inline-block;
+                                    padding: 8px 16px;
+                                }
+                                
+                                #aa:hover {
+                                    background-color: #ddd;
+                                    color: black;
+                                }
+                                
+                                .previous {
+                                    background-color: #f1f1f1;
+                                    color: black;
+                                }
+                                
+                                .next {
+                                    background-color: #f1f1f1;
+                                    color: black;
+                                }
+                                
+                                .round {
+                                    border-radius: 50%;
+                                }
+                                </style> 
+                                {% if page_no!=1 %}
+                                <a href="{{url_for('tagpage',page_no=page_no-1)}}" id="aa" class="previous round">&#8249;</a>
+                                {% endif %}
+                                {% if page_no!=32 %}
+                                <a href="{{url_for('tagpage',page_no=page_no+1)}}" id="aa" style="float:right;" class="next round">&#8250;</a>
+                                {% endif %}
                             </div>
                         </div>
                     </div>                   
