--- a/templates/login.html
+++ b/templates/login.html
@@ -12,21 +12,15 @@
       <div class="container">
         <div class="col-4">&nbsp;</div>
         <div class="card card-signup col-4">
-          <form class="form" action="questions.html">
+          <form class="form" action="{{url_for('login')}}" method="POST">
             <div class="header hatch header-text header-primary">LOGIN</div>
             <div class="form-container mt-20 p-15">
               <div class="form-group">
                 <input
                   class="stretchRight input-control"
-                  type="text"
-                  placeholder="USERNAME"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  class="stretchRight input-control"
                   type="email"
                   placeholder="EMAIL"
+                  name="email"
                 />
               </div>
               <div class="form-group">
@@ -34,6 +28,7 @@
                   class="stretchRight input-control"
                   type="password"
                   placeholder="PASSWORD"
+                  name="password"
                 />
               </div>
               <div class="form-group">
