Tag Search Module Added

--- a/templates/tags.html
+++ b/templates/tags.html
@@ -93,16 +93,14 @@
                                 <div class="mega-text hatch text-primary" style="margin-top: 10px; margin-bottom: 10px;">
                                     {% if n==500 %}
                                     All Tags
-                                    </div>
-                                    <div class="clearfix bb"></div> 
+                                    <div class="clearfix bb" style="margin-top:10px"></div> 
                                     {% elif n==0 %}
                                     No such tag exist
                                     {% else %}
                                     {{search_string}} Tags
-                                    </div>
-                                    <div class="clearfix bb"></div> 
+                                    <div class="clearfix bb" style="margin-top:10px"></div> 
                                     {% endif %}                                                   
-                            </div>                                                        
+                                </div>                                                        
                             </div>
                             <div class="panel__body m-20">
                                 <style>
