Improved Tag Search

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -37,7 +37,7 @@
               </a>
             </li>
             <li class="">
-              <a href="{{url_for('tagpage',page_no=1)}}">
+              <a href="{{url_for('tagpage',page_no=1,flag=True)}}">
                 <img
                   class="icon"
                   src="{{ url_for('static',filename='img/price-tag.svg') }}"
