--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,7 @@
                   type="text"
                   placeholder="USERNAME"
                   name="username"
+                  required="true"
                 />
               </div>
               <div class="form-group">
@@ -29,6 +30,7 @@
                   type="email"
                   placeholder="EMAIL"
                   name="email"
+                  required="true"
                 />
               </div>
               <div class="form-group">
@@ -37,9 +39,10 @@
                   type="password"
                   placeholder="PASSWORD"
                   name="password"
+                  required="true"
                 />
               </div>
-              <div class="form-group">
+              <div class="form-group" style="margin-left: 30px; margin-right: 30px;">
                 <button
                   class="floating btn btn-primary bg-orange p-15 btn-block"
                 >
