--- a/templates/tags.html
+++ b/templates/tags.html
@@ -95,9 +95,9 @@
                                     All Tags
                                     <div class="clearfix bb" style="margin-top:10px"></div> 
                                     {% elif n==0 %}
-                                    No such tag exist
+                                    No such tag exists
                                     {% else %}
-                                    {{search_string}} Tags
+                                    {{search_string}} tags
                                     <div class="clearfix bb" style="margin-top:10px"></div> 
                                     {% endif %}                                                   
                                 </div>                                                        
